--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,16 @@ layout: default
 title: Your New Jekyll Site
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+<div class="container">
+<input type="checkbox" id="left" class="toggle-input show-left" />
+<input type="checkbox" id="right" class="toggle-input show-right" />
+<header>
+<label for="left" class="toggle">show-left</label>
+<label for="right" class="toggle">show-right</label>
+<h1>header</h1>
+</header>
+<div class="left" id="left">left</div>
+<div class="main">main</div>
+<div class="right" id="right">right</div>
+<footer>footer</footer>
 </div>
